// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VoteTab /> should render correctly 1`] = `
<Table
  emptyMessage=""
>
  <Table.Thead>
    <Table.Tr>
      <Table.Th>
        admin.fields.comment_vote.voter
      </Table.Th>
      <Table.Th>
        global.source
      </Table.Th>
      <Table.Th>
        vote.type
      </Table.Th>
      <Table.Th>
        global.publication
      </Table.Th>
    </Table.Tr>
  </Table.Thead>
  <Table.Tbody
    hasMore={false}
    onScrollToBottom={[Function]}
    useInfiniteScroll={true}
  >
    <Table.Tr
      key="value123"
      rowId="value123"
      verticalAlign="top"
    >
      <Table.Td>
        vince-123
      </Table.Td>
      <Table.Td>
        <Text>
          global.application
        </Text>
        <Link
          href="https://debate123.com"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://debate123.com
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="green"
        >
          argument.show.type.for
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value456"
      rowId="value456"
      verticalAlign="top"
    >
      <Table.Td>
        vince-123
      </Table.Td>
      <Table.Td>
        <Text>
          global.application
        </Text>
        <Link
          href="https://debate123.com"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://debate123.com
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="red"
        >
          argument.show.type.against
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value789"
      rowId="value789"
      verticalAlign="top"
    >
      <Table.Td>
        global.anonymous
      </Table.Td>
      <Table.Td>
        <Text>
          global.application
        </Text>
        <Link
          href="https://debate123.com"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://debate123.com
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="red"
        >
          argument.show.type.against
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={true}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            waiting
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value987"
      rowId="value987"
      verticalAlign="top"
    >
      <Table.Td>
        vince-123
      </Table.Td>
      <Table.Td>
        <Text>
          share.mail
        </Text>
        <Text
          color="gray.500"
        >
          -
        </Text>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="red"
        >
          argument.show.type.against
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value654"
      rowId="value654"
      verticalAlign="top"
    >
      <Table.Td>
        global.anonymous
      </Table.Td>
      <Table.Td>
        <Text>
          global.widget
        </Text>
        <Link
          href="https://fr.reactjs.org/docs/fragments.html"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://fr.reactjs.org/docs/fragments.html
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="green"
        >
          argument.show.type.for
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
  </Table.Tbody>
</Table>
`;

exports[`<VoteTab /> should render correctly when no vote 1`] = `
<Flex
  align="center"
  direction="column"
  spacing={6}
>
  <SpotIcon
    name="RATING_CLICK"
    size="lg"
  />
  <Text
    color="gray.500"
  >
    debate.empty.votes.section
  </Text>
</Flex>
`;

exports[`<VoteTab /> should render correctly when step closed 1`] = `
<Table
  emptyMessage=""
>
  <Table.Thead>
    <Table.Tr>
      <Table.Th>
        admin.fields.comment_vote.voter
      </Table.Th>
      <Table.Th>
        global.source
      </Table.Th>
      <Table.Th>
        vote.type
      </Table.Th>
      <Table.Th>
        global.publication
      </Table.Th>
    </Table.Tr>
  </Table.Thead>
  <Table.Tbody
    hasMore={false}
    onScrollToBottom={[Function]}
    useInfiniteScroll={true}
  >
    <Table.Tr
      key="value123"
      rowId="value123"
      verticalAlign="top"
    >
      <Table.Td>
        vince-123
      </Table.Td>
      <Table.Td>
        <Text>
          global.application
        </Text>
        <Link
          href="https://debate123.com"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://debate123.com
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="green"
        >
          argument.show.type.for
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value456"
      rowId="value456"
      verticalAlign="top"
    >
      <Table.Td>
        vince-123
      </Table.Td>
      <Table.Td>
        <Text>
          global.application
        </Text>
        <Link
          href="https://debate123.com"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://debate123.com
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="red"
        >
          argument.show.type.against
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value789"
      rowId="value789"
      verticalAlign="top"
    >
      <Table.Td>
        global.anonymous
      </Table.Td>
      <Table.Td>
        <Text>
          global.application
        </Text>
        <Link
          href="https://debate123.com"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://debate123.com
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="red"
        >
          argument.show.type.against
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={true}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.no.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value987"
      rowId="value987"
      verticalAlign="top"
    >
      <Table.Td>
        vince-123
      </Table.Td>
      <Table.Td>
        <Text>
          share.mail
        </Text>
        <Text
          color="gray.500"
        >
          -
        </Text>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="red"
        >
          argument.show.type.against
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
    <Table.Tr
      key="value654"
      rowId="value654"
      verticalAlign="top"
    >
      <Table.Td>
        global.anonymous
      </Table.Td>
      <Table.Td>
        <Text>
          global.widget
        </Text>
        <Link
          href="https://fr.reactjs.org/docs/fragments.html"
          target="_blank"
          truncate={50}
          variant="hierarchy"
        >
          https://fr.reactjs.org/docs/fragments.html
        </Link>
      </Table.Td>
      <Table.Td>
        <Tag
          variantColor="green"
        >
          argument.show.type.for
        </Tag>
      </Table.Td>
      <Table.Td>
        <ConditionalWrapper
          when={false}
          wrapper={[Function]}
        >
          <Text
            display="inline-block"
          >
            global.published
          </Text>
        </ConditionalWrapper>
        <Text
          color="gray.500"
        >
          Tue Mar 01 2050 12:00:00 GMT+0100
        </Text>
      </Table.Td>
    </Table.Tr>
  </Table.Tbody>
</Table>
`;
